Assignment5/src/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of attendee</description>
        <inlineHelpText>Give the email for better communication .</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Name_of_Attendee__c</fullName>
        <description>Full name of attendee, who is attending the training sessions.</description>
        <formula>Contact__r.FirstName &amp;&apos; &apos;&amp;  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will display full name of attendee mention on contact</inlineHelpText>
        <label>Full Name of Attendee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number of attendee.</description>
        <inlineHelpText>Give the phone number for better communication.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Training_Session_Name__c</fullName>
        <description>Master - detailed relationship to attendee , where training session is the parent and attendee is child .</description>
        <label>Training Session Name</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees (Training Session Name)</relationshipLabel>
        <relationshipName>Attendees1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ShowNameRelatedContactTrainingSession</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Training_Session_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>Name, RelatedContact, TrainingSession</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Validate_Email_Address</fullName>
        <active>false</active>
        <description>Email address should follow the format</description>
        <errorConditionFormula>NOT(REGEX(Email__c, &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&quot;))</errorConditionFormula>
        <errorMessage>Write the valid email e.g: example@domain.com</errorMessage>
    </validationRules>
</CustomObject>